# jira-mcp-rs

./: Cargo.toml  README.md
src/: jira.rs  main.rs  server.rs
src/jira/: mod.rs  models.rs
src/tools/: formatters.rs  mod.rs  params.rs
